--- a/17.04 promise/main.css
+++ b/17.04 promise/main.css
@@ -2,6 +2,46 @@
     max-width: 1200px;
     margin: 0 auto;
   }
+  header {
+    position: fixed;
+    width: 100%;
+    height: 80px;
+   background-color: black;
+      top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    padding: 20px 0;
+  
+  }
+  header .all{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  header .header{
+    
+     font-size: 20px;
+     color: white;
+  }
+  header nav ul {
+    display: flex;
+    gap: 10px;
+    text-align: center;
+    list-style-type: none;
+    justify-content: center;
+  }
+  header nav ul li a {
+    text-decoration: none;
+    font-size: 14px;
+    padding: 10px 10px;
+    font-family: "Roboto", "sans-serif";
+    color: white;
+    transition: color 0.4 ease-in-out;
+  }
+  header nav ul li a:hover {
+    color: red;
+  }
 .loader {
     justify-content: center;
     align-items: center;
@@ -23,4 +63,14 @@
         transform: rotate(360deg);
     }
     } 
-   
+   .form-group{
+    padding: 10px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
+   form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
